--- a/support.html
+++ b/support.html
@@ -16,7 +16,7 @@
 
     <h2>Contact Support</h2>
     <ul>
-      <li><strong>Email:</strong> <a href="mailto:zubairmalikmd@gmail.com">zubairmalikmd@gmail.com</a></li>
+      <li><strong>Email:</strong> <a href="mailto:zub165@yahoo.com">zub165@yahoo.com</a></li>
       <li><strong>GitHub Issues:</strong> <a href="https://github.com/zub165/aiagent-support/issues" target="_blank">Submit a bug report</a></li>
     </ul>
 
