--- a/privacy.html
+++ b/privacy.html
@@ -34,6 +34,6 @@
   <p>The app may connect to external APIs (e.g., OpenAI or custom hosted APIs) — please refer to their privacy terms as well.</p>
 
   <h2>5. Contact Us</h2>
-  <p>If you have any questions, email us at <a href="mailto:zubairmalikmd@gmail.com">zubairmalikmd@gmail.com</a></p>
+  <p>If you have any questions, email us at <a href="mailto:zub165@yahoo.com">zub165@yahoo.com</a></p>
 </body>
 </html>
