--- a/privacy.html
+++ b/privacy.html
@@ -1,39 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Privacy Policy - AI Agent</title>
-  <style>
-    body { font-family: Arial, sans-serif; line-height: 1.6; padding: 20px; background: #f9f9f9; color: #333; }
-    h1, h2 { color: #2d3e50; }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Privacy Policy - AI Agent</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            max-width: 800px;
+            margin: 40px auto;
+            padding: 20px;
+            background-color: #f8f9fa;
+            color: #333;
+        }
+        h1, h2 {
+            color: #2c3e50;
+        }
+        a {
+            color: #007bff;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
-  <h1>Privacy Policy</h1>
-  <p>Last updated: April 16, 2025</p>
 
-  <p>At <strong>AI Agent</strong>, we take your privacy seriously. This privacy policy explains how we collect, use, and protect your information when using the app.</p>
+    <h1>Privacy Policy for AI Agent</h1>
+    <p><strong>Effective Date:</strong> August 14, 2025</p>
 
-  <h2>1. Information We Collect</h2>
-  <ul>
-    <li><strong>User Input:</strong> We process text input you provide in the chat interface to generate responses.</li>
-    <li><strong>Session Data:</strong> A temporary session ID may be used to maintain conversational context.</li>
-    <li><strong>Device Info:</strong> Anonymous technical data may be collected to improve performance (e.g., device model, OS version).</li>
-  </ul>
+    <h2>1. Introduction</h2>
+    <p>Welcome to <strong>AI Agent</strong>. This Privacy Policy explains how we handle your information when you use our app. 
+    We respect your privacy and are committed to protecting it. Our app only collects and uses information necessary for its core functionality.</p>
 
-  <h2>2. How We Use the Data</h2>
-  <ul>
-    <li>To provide real-time medical chatbot responses</li>
-    <li>To improve app performance and troubleshoot issues</li>
-  </ul>
+    <h2>2. Permissions Used</h2>
+    <p><strong>Microphone (RECORD_AUDIO)</strong> – This permission allows the app to access your device’s microphone <strong>only</strong> when you:</p>
+    <ul>
+        <li>Record audio for app features (e.g., voice commands, audio messages, speech recognition).</li>
+        <li>The app does <strong>not</strong> record audio without your action or consent.</li>
+    </ul>
 
-  <h2>3. Data Retention & Security</h2>
-  <p>We do not permanently store or share your messages. All messages are processed securely, and any session data is temporary unless stored via your custom server integration.</p>
+    <h2>3. Data Collection and Usage</h2>
+    <ul>
+        <li>We do <strong>not</strong> collect, store, or share any personal audio recordings on our servers.</li>
+        <li>Any audio captured is processed only for the intended feature and is not stored beyond that session unless you explicitly save it.</li>
+        <li>We do not sell or rent your data to third parties.</li>
+    </ul>
 
-  <h2>4. Third-Party Services</h2>
-  <p>The app may connect to external APIs (e.g., OpenAI or custom hosted APIs) — please refer to their privacy terms as well.</p>
+    <h2>4. Third-Party Services</h2>
+    <p>We may use trusted third-party services (e.g., speech recognition APIs) to process audio, but no personally identifiable information is sent without your consent.</p>
 
-  <h2>5. Contact Us</h2>
-  <p>If you have any questions, email us at <a href="mailto:zub165@yahoo.com">zub165@yahoo.com</a></p>
+    <h2>5. Security</h2>
+    <p>We take reasonable measures to protect your information. However, no method of transmission or storage is completely secure.</p>
+
+    <h2>6. Your Choices</h2>
+    <p>You can deny microphone access in your device settings. Doing so will disable features that require audio input.</p>
+
+    <h2>7. Changes to This Policy</h2>
+    <p>We may update this Privacy Policy. Any changes will be posted on this page with a new "Effective Date."</p>
+
+    <h2>8. Contact Us</h2>
+    <p>If you have any questions, please contact us at:</p>
+    <p>Email: <a href="mailto:zub165@yahoo.com">zub165@yahoo.com</a></p>
+
 </body>
 </html>
+
