--- a/privacy.html
+++ b/privacy.html
@@ -1,70 +1,137 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy - AI Agent</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            max-width: 800px;
-            margin: 40px auto;
-            padding: 20px;
-            background-color: #f8f9fa;
-            color: #333;
-        }
-        h1, h2 {
-            color: #2c3e50;
-        }
-        a {
-            color: #007bff;
-            text-decoration: none;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-    </style>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Privacy Policy – Medical Assistant (HOPI) by Newgen</title>
+  <meta name="description" content="Privacy Policy for Medical Assistant (HOPI) by Newgen. Explains what we collect, how we use it, and your rights."/>
+  <style>
+    :root { color-scheme: light dark; }
+    body { font-family: system-ui,-apple-system,Segoe UI,Roboto,Inter,Arial,sans-serif; line-height: 1.6; margin: 0; }
+    header { background: #0d2538; color: #fff; padding: 2rem 1rem; }
+    main { max-width: 900px; margin: 0 auto; padding: 2rem 1rem; }
+    h1,h2,h3 { line-height: 1.3; }
+    a { color: #0a7; }
+    footer { border-top: 1px solid #ddd; margin-top: 2rem; padding: 1.25rem 0; font-size: .95rem; }
+    code { background: #f6f8fa; padding: .1rem .3rem; border-radius: 4px; }
+  </style>
 </head>
 <body>
+  <header>
+    <h1>Privacy Policy</h1>
+    <p>for <strong>Medical Assistant (HOPI)</strong> by <strong>Newgen</strong></p>
+  </header>
 
-    <h1>Privacy Policy for AI Agent</h1>
-    <p><strong>Effective Date:</strong> August 14, 2025</p>
+  <main>
+    <p><em>Last updated: <span id="updated">August 14, 2025</span></em></p>
 
-    <h2>1. Introduction</h2>
-    <p>Welcome to <strong>AI Agent</strong>. This Privacy Policy explains how we handle your information when you use our app. 
-    We respect your privacy and are committed to protecting it. Our app only collects and uses information necessary for its core functionality.</p>
+    <h2>Who we are</h2>
+    <p>
+      This Privacy Policy explains how <strong>Newgen</strong> (“we”, “us”, or “our”) collects,
+      uses, and protects information when you use the mobile application
+      <strong>Medical Assistant (HOPI)</strong> (“the App”).
+    </p>
 
-    <h2>2. Permissions Used</h2>
-    <p><strong>Microphone (RECORD_AUDIO)</strong> – This permission allows the app to access your device’s microphone <strong>only</strong> when you:</p>
+    <h2>What the app does</h2>
+    <p>
+      Medical Assistant (HOPI) helps medical students and clinicians draft and organize medical
+      notes (including history writing) and related documentation. Optional speech-to-text
+      features allow you to dictate notes using the device microphone.
+    </p>
+
+    <h2>Information we collect</h2>
     <ul>
-        <li>Record audio for app features (e.g., voice commands, audio messages, speech recognition).</li>
-        <li>The app does <strong>not</strong> record audio without your action or consent.</li>
+      <li><strong>User-Provided Content</strong>: Text you enter or dictate (e.g., medical note drafts, prompts, or templates) within the App.</li>
+      <li><strong>Audio for Dictation (Microphone)</strong>: If you use voice dictation, the App accesses the device microphone to capture your speech and convert it to text. Audio is used only for this purpose.</li>
+      <li><strong>Device &amp; App Diagnostics</strong>: Non-identifying information such as app version, device model, OS version, crash logs, and basic analytics to improve reliability.</li>
     </ul>
 
-    <h2>3. Data Collection and Usage</h2>
+    <h2>How we use information</h2>
     <ul>
-        <li>We do <strong>not</strong> collect, store, or share any personal audio recordings on our servers.</li>
-        <li>Any audio captured is processed only for the intended feature and is not stored beyond that session unless you explicitly save it.</li>
-        <li>We do not sell or rent your data to third parties.</li>
+      <li>Provide core features (note drafting, history writing, voice dictation, templates).</li>
+      <li>Improve accuracy, performance, and user experience.</li>
+      <li>Respond to support requests and prevent abuse.</li>
     </ul>
 
-    <h2>4. Third-Party Services</h2>
-    <p>We may use trusted third-party services (e.g., speech recognition APIs) to process audio, but no personally identifiable information is sent without your consent.</p>
+    <h2>Data processing &amp; storage</h2>
+    <p>
+      By default, Medical Assistant (HOPI) processes your inputs to generate text output within the
+      App. Depending on your settings and features you enable, some processing (e.g., speech-to-text or AI suggestions)
+      may be handled by trusted third-party services (see below). We do not sell your personal data.
+    </p>
 
-    <h2>5. Security</h2>
-    <p>We take reasonable measures to protect your information. However, no method of transmission or storage is completely secure.</p>
+    <h2>Third-party services</h2>
+    <p>
+      To deliver certain features, the App may interact with platform services (e.g., Android speech APIs)
+      or other providers you explicitly enable in settings. These services process only what is needed to
+      provide the feature and are subject to their own privacy policies.
+    </p>
 
-    <h2>6. Your Choices</h2>
-    <p>You can deny microphone access in your device settings. Doing so will disable features that require audio input.</p>
+    <h2>Sensitive information</h2>
+    <p>
+      The App is a documentation aid and does not itself provide medical advice. You are responsible for
+      ensuring that any content you enter complies with applicable laws, policies, and your organization’s
+      confidentiality requirements. Do not include personally identifiable patient information unless you
+      have lawful authorization and appropriate safeguards in place.
+    </p>
 
-    <h2>7. Changes to This Policy</h2>
-    <p>We may update this Privacy Policy. Any changes will be posted on this page with a new "Effective Date."</p>
+    <h2>Data retention</h2>
+    <ul>
+      <li><strong>On-device content</strong>: Your notes are stored on your device unless you export or sync them using services of your choice. You can delete them at any time from within the App.</li>
+      <li><strong>Diagnostics</strong>: Crash/analytics data, if collected, is retained only as long as necessary to improve the App.</li>
+    </ul>
 
-    <h2>8. Contact Us</h2>
-    <p>If you have any questions, please contact us at:</p>
-    <p>Email: <a href="mailto:zub165@yahoo.com">zub165@yahoo.com</a></p>
+    <h2>Your choices &amp; rights</h2>
+    <ul>
+      <li><strong>Microphone access</strong>: Grant or revoke in your device settings at any time.</li>
+      <li><strong>Data access &amp; deletion</strong>: You can delete your notes locally in the App. You may also request deletion of any server-side diagnostics tied to your use by contacting us (see Contact below).</li>
+      <li><strong>Export</strong>: You may export note content using the App’s export features (where available).</li>
+    </ul>
 
+    <h2>Children’s privacy</h2>
+    <p>
+      Medical Assistant (HOPI) is not directed to children under 13. We do not knowingly collect information from
+      children under 13. If you believe a child has provided information, contact us and we will promptly delete it.
+    </p>
+
+    <h2>Security</h2>
+    <p>
+      We use reasonable technical and organizational measures to protect information. However, no method of
+      transmission or storage is 100% secure. You are responsible for safeguarding any exported files or backups
+      you create.
+    </p>
+
+    <h2>International transfers</h2>
+    <p>
+      Depending on your location and the services you enable, information may be processed in
+      jurisdictions that may have different data-protection laws than your own.
+    </p>
+
+    <h2>Changes to this policy</h2>
+    <p>
+      We may update this Privacy Policy from time to time. If changes are significant, we will provide notice
+      in the App or by updating the “Last updated” date above.
+    </p>
+
+    <h2>Contact &amp; data requests</h2>
+    <p>
+      If you have questions, need access/deletion, or want to report a concern, contact:
+    </p>
+    <ul>
+      <li><strong>Developer / Entity:</strong> Newgen</li>
+      <li><strong>App:</strong> Medical Assistant (HOPI)</li>
+      <li><strong>Email:</strong> <a href="mailto:zub165@yahoo.com">zub165@yahoo.com</a></li>
+      <li><strong>Policy URL:</strong> <a href="https://zub165.github.io/AI-Agent-/privacy.html">https://zub165.github.io/AI-Agent-/privacy.html</a></li>
+    </ul>
+
+    <footer>
+      <p>&copy; <span id="year"></span> Newgen. All rights reserved.</p>
+    </footer>
+  </main>
+
+  <script>
+    // Update year automatically
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
-
