--- a/privacy.html
+++ b/privacy.html
@@ -1,51 +1,146 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Privacy Policy & Terms of Use - AI Medical Assistant</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Terms of Use (EULA) – Medical Assistant Doc Notes</title>
+  <meta name="description" content="End User License Agreement and Terms of Use for Medical Assistant Doc Notes by Innovators Generation." />
   <style>
-    body { font-family: Arial, sans-serif; margin: 40px; line-height: 1.6; color: #333; }
-    h1, h2, h3 { color: #0056a3; }
-    a { color: #0056a3; text-decoration: none; }
-    a:hover { text-decoration: underline; }
+    :root { color-scheme: light dark; }
+    body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Inter, Arial, sans-serif; line-height: 1.6; margin: 0; }
+    header { background:#0d2538; color:#fff; padding:2rem 1rem; }
+    main { max-width: 960px; margin: 0 auto; padding: 2rem 1rem; }
+    h1,h2 { line-height: 1.25; }
+    a { color:#0a7; }
+    .card { background: rgba(0,0,0,.03); border: 1px solid rgba(0,0,0,.08); border-radius: 12px; padding: 1rem 1.25rem; }
+    .mono { font-family: ui-monospace, SFMono-Regular, Menlo, Consolas, monospace; }
+    footer { border-top: 1px solid rgba(0,0,0,.08); margin-top: 2rem; padding: 1.25rem 0; font-size: .95rem; }
   </style>
 </head>
 <body>
+  <header>
+    <h1>Terms of Use (EULA)</h1>
+    <p>for <strong>Medical Assistant Doc Notes</strong> by <strong>Innovators Generation</strong></p>
+  </header>
 
-  <h1>Privacy Policy & Terms of Use</h1>
-  <p>Last updated: August 15, 2025</p>
-  <p>Welcome to the AI Medical Assistant app. By using this app, you agree to both the Privacy Policy and the Terms of Use outlined below.</p>
+  <main>
+    <p><em>Last updated: <span id="updated">August 15, 2025</span></em></p>
 
-  <hr>
-  <h2>1. Privacy Policy</h2>
+    <div class="card">
+      <p><strong>Summary (not a substitute for the full terms):</strong></p>
+      <ul>
+        <li>Auto-renewing subscriptions are billed to your Apple ID and renew unless canceled at least 24 hours before the end of the current period.</li>
+        <li>Manage or cancel any time in <span class="mono">Settings &gt; Apple ID &gt; Subscriptions</span>.</li>
+        <li>Medical/AI outputs are for documentation assistance only — not medical advice or clinical decision-making.</li>
+      </ul>
+    </div>
 
-  <h3>Data Collection</h3>
-  <p>We collect limited personal and health-related information entered by you to provide medical note assistance and related services. This may include:</p>
-  <ul>
-    <li>Basic profile details (name, email, etc.)</li>
-    <li>Medical notes or documentation provided by you</li>
-    <li>Device and usage data (for performance and security)</li>
-  </ul>
+    <h2>1) Agreement</h2>
+    <p>
+      These Terms of Use constitute a legal agreement between you and <strong>Innovators Generation</strong>
+      (“we”, “us”, “our”) governing your use of the mobile application <strong>Medical Assistant Doc Notes</strong>
+      (the “App”). By installing, accessing, or using the App, you agree to these Terms. If you do not agree,
+      do not use the App.
+    </p>
 
-  <h3>Data Usage</h3>
-  <p>Your data is used to deliver app functionality, improve services, and maintain compliance with medical privacy standards.</p>
+    <h2>2) License</h2>
+    <p>
+      We grant you a limited, non-exclusive, non-transferable, revocable license to use the App on Apple-branded
+      devices you own or control, as permitted by the App Store Terms of Service. You may not copy, modify, reverse engineer,
+      or create derivative works from the App or any part of it except as allowed by applicable law.
+    </p>
 
-  <h3>Data Sharing</h3>
-  <p>We do not sell or share your personal data with third parties, except as required by law or to provide core services (e.g., secure hosting, payment processing).</p>
+    <h2>3) Subscriptions &amp; Billing (Auto-Renewing)</h2>
+    <div class="card">
+      <p><strong>Available Plans</strong> <!-- EDIT: confirm names/prices/periods -->
+        <br>• <strong>Premium Monthly</strong>: <strong>$9.99/month</strong>
+        <br>• <strong>Premium Yearly</strong>: <strong>$99.99/year</strong>
+      </p>
+    </div>
+    <ul>
+      <li><strong>Payment</strong>: Your purchase is charged to your Apple ID at confirmation.</li>
+      <li><strong>Auto-Renewal</strong>: Subscriptions renew automatically unless canceled at least 24 hours before the current period ends.</li>
+      <li><strong>Renewal Charges</strong>: Your account will be charged for renewal within 24 hours prior to the end of the current period at the price listed above or as shown in-app at checkout.</li>
+      <li><strong>Manage / Cancel</strong>: You can manage or cancel your subscription in <span class="mono">Settings &gt; Apple ID &gt; Subscriptions</span>. Deleting the App does not cancel your subscription.</li>
+      <li><strong>Trials</strong> (if offered): Any unused portion of a free trial is forfeited when you purchase a subscription. Trial converts to a paid subscription unless canceled at least 24 hours before the trial ends.</li>
+      <li><strong>Refunds</strong>: We do not provide refunds for partial periods. Refunds, where applicable, are handled by Apple according to App Store policy.</li>
+      <li><strong>Changes</strong>: Prices and features may change; we will notify you in-app or via the App Store listing when required.</li>
+    </ul>
 
-  <h3>Data Security</h3>
-  <p>We use encryption and secure servers to protect your information. However, no system is 100% secure, and you agree to use the app with this understanding.</p>
+    <h2>4) Acceptable Use</h2>
+    <ul>
+      <li>No unlawful, harmful, deceptive, or infringing activity.</li>
+      <li>No uploading of content that is offensive, discriminatory, or violates privacy or confidentiality obligations.</li>
+      <li>No attempts to bypass technical protections, scrape or misuse the service, or resell/redistribute without permission.</li>
+    </ul>
 
-  <h3>Contact</h3>
-  <p>If you have any concerns, contact us at: <a href="mailto:support@example.com">support@example.com</a></p>
+    <h2>5) Medical &amp; AI Disclaimers</h2>
+    <ul>
+      <li>The App is a documentation aide (e.g., history writing, note templates, AI-assisted drafting). It does <strong>not</strong> provide medical advice, diagnosis, or treatment.</li>
+      <li>You must independently verify all outputs and exercise professional judgment. Do not rely on AI-generated content for clinical decisions.</li>
+      <li>You are responsible for complying with all applicable laws and policies (e.g., confidentiality, data protection, institutional rules) when entering or exporting content.</li>
+      <li><strong>Reporting</strong>: If you encounter harmful or inappropriate AI-generated content, you can report it via the in-app report link (where available) or email us at
+        <a href="mailto:zub165@yahoo.com">zub165@yahoo.com</a>. We use such reports to improve filtering and moderation.</li>
+    </ul>
 
-  <hr>
-  <h2>2. Terms of Use (EULA)</h2>
+    <h2>6) Privacy</h2>
+    <p>
+      Your use of the App is also governed by our <a href="https://zub165.github.io/AI-Agent-/privacy.html" rel="noopener">Privacy Policy</a>.
+      Please review it to understand how we collect and use data.
+    </p>
 
-  <h3>Acceptance</h3>
-  <p>By using this app, you accept these terms. If you do not agree, you must not use the app.</p>
+    <h2>7) Intellectual Property</h2>
+    <p>
+      The App and all related content, trademarks, and technology are owned by or licensed to Innovators Generation and are protected by
+      intellectual property laws. Except for the limited license above, no rights are granted to you.
+    </p>
 
-  <h3>License</h3>
-  <p>You are granted a limited, non-transferable license to use this app for personal and prof
+    <h2>8) Third-Party Services</h2>
+    <p>
+      Some features (e.g., speech-to-text, analytics, content generation) may rely on third-party services. Your use of those features may be subject
+      to the third party’s terms and privacy policy. We are not responsible for those services.
+    </p>
 
+    <h2>9) Termination</h2>
+    <p>
+      We may suspend or terminate access to the App (in whole or part) for violations of these Terms or where required by law.
+      You may stop using the App at any time; subscription cancellation must be completed through Apple as described above.
+    </p>
+
+    <h2>10) Disclaimers &amp; Limitation of Liability</h2>
+    <p>
+      The App is provided “as is” and “as available” without warranties of any kind. To the maximum extent permitted by law,
+      Innovators Generation disclaims all warranties and will not be liable for any indirect, incidental, special, consequential,
+      or punitive damages, or any loss of data or profits, arising from or related to your use of the App.
+    </p>
+
+    <h2>11) Changes to These Terms</h2>
+    <p>
+      We may update these Terms from time to time. If changes are material, we will provide notice in the App or via our website.
+      Your continued use after changes become effective constitutes acceptance.
+    </p>
+
+    <h2>12) Governing Law</h2>
+    <p>
+      These Terms are governed by the laws of your jurisdiction of residence, without regard to its conflict-of-law rules.
+      Any disputes will be subject to the exclusive jurisdiction of the courts located in that jurisdiction.
+    </p>
+
+    <h2>13) Contact</h2>
+    <ul>
+      <li><strong>Developer / Entity:</strong> Innovators Generation</li>
+      <li><strong>App:</strong> Medical Assistant Doc Notes</li>
+      <li><strong>Email:</strong> <a href="mailto:zub165@yahoo.com">zub165@yahoo.com</a></li>
+      <li><strong>Privacy Policy:</strong> <a href="https://zub165.github.io/AI-Agent-/privacy.html">https://zub165.github.io/AI-Agent-/privacy.html</a></li>
+    </ul>
+
+    <footer>
+      <p>&copy; <span id="year"></span> Innovators Generation. All rights reserved.</p>
+    </footer>
+  </main>
+
+  <script>
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
+</body>
+</html>
